@@ -1,3 +1,8 @@
+2005-08-18 23:22 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormDocument.m: retrieveObjectForParent:.. check for 
+	nil before placing in result array.
+
 2005-08-18 22:21 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormDocument.m: attachObject:toParent: added code to
